<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ARK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="input_text">Your text</string>
    <string name="randomize">Randomize</string>
    <string name="input_recipient">Recipient</string>
    <string name="send">Send</string>
    <string name="photo">Choose a photo</string>

</resources>
